@@ -16,7 +16,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="group" ref="contract.group_contract_manage"/>
         </record>
         <record model="ir.model.access" id="access_endorsement_configuration_number_sequence_group_product_manage">
-            <field name="model" search="[('model', '=', 'endorsement.configuration.endorsement_set_number_sequence')]"/>
+            <field name="model" search="[('model', '=', 'endorsement.configuration.endorsement_set_sequence')]"/>
             <field name="group" ref="offered.group_product_manage"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="True"/>
@@ -33,7 +33,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <!-- Default Endorsement Set Access Rights -->
         <record model="ir.model.access" id="access_endorsement_configuration_number_sequence">
-            <field name="model" search="[('model', '=', 'endorsement.configuration.endorsement_set_number_sequence')]"/>
+            <field name="model" search="[('model', '=', 'endorsement.configuration.endorsement_set_sequence')]"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="False"/>
             <field name="perm_create" eval="False"/>
