@@ -1,3 +1,5 @@
+* BUG#7653 Réduction de la longueur du nom technique de la Séquence du numéro d'ensemble d'avenants
+
 Version 1.14 - 2017-11-09
 * BUG#7065 Ajout explicite de la méthode de selection du contact sur les avenants de contrat liés
 
