@@ -1,3 +1,5 @@
+* BUG#7653 Shorten the Endorsement Set Sequence technical name
+
 Version 1.14 - 2017-11-09
 * BUG#7065 Adding explicity the selection method of the contact on endorsement set
 
